# ftgles2

./: README.md
Xcode/freetype2/freetype2.xcodeproj/: project.pbxproj
ftgles2/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.inO  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.acO  ftgles2.pc  ftgles2.pc.in  libtool  t1  t1.c  t1.cO
ftgles2/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
ftgles2/demo/: FTGLDemo.cpp  FTGLMFontDemo.cpp  Makefile  Makefile.in  c-demo.c  ftgles2_c_demo.c  test_ftgles2_c_demo.sh
ftgles2/docs/: Makefile  Makefile.in  doxygen.cfg
ftgles2/msvc/: Makefile  Makefile.in
ftgles2/src/: FTBuffer.cpp  FTCharToGlyphIndexMap.h  FTCharmap.h  FTContour.h  FTFace.h  FTGlyphContainer.cpp  FTGlyphContainer.h  FTInternals.h  FTLibrary.h  FTList.h  FTPoint.cpp  FTSize.h  FTVector.h  FTVectoriser.h  Makefile  Makefile.am  Makefile.amO  Makefile.in  libftgles2.la  libftgles2_la-FTBuffer.lo  libftgles2_la-FTCharmap.lo  libftgles2_la-FTContour.lo  libftgles2_la-FTFace.lo  libftgles2_la-FTGlyphContainer.lo  libftgles2_la-FTLibrary.lo  libftgles2_la-FTPoint.lo  libftgles2_la-FTSize.lo  libftgles2_la-FTVectoriser.lo
ftgles2/src/.deps/: libftgl_la-FTBitmapFont.Plo  libftgl_la-FTBitmapGlyph.Plo  libftgl_la-FTBuffer.Plo  libftgl_la-FTBufferFont.Plo  libftgl_la-FTBufferGlyph.Plo  libftgl_la-FTCharmap.Plo  libftgl_la-FTContour.Plo  libftgl_la-FTFace.Plo  libftgl_la-FTFont.Plo  libftgl_la-FTFontGlue.Plo  libftgl_la-FTGlyph.Plo  libftgl_la-FTGlyphContainer.Plo  libftgl_la-FTGlyphGlue.Plo  libftgl_la-FTLayout.Plo  libftgl_la-FTLayoutGlue.Plo  libftgl_la-FTLibrary.Plo  libftgl_la-FTOutlineFont.Plo  libftgl_la-FTOutlineGlyph.Plo  libftgl_la-FTPoint.Plo  libftgl_la-FTSimpleLayout.Plo  libftgl_la-FTSize.Plo  libftgl_la-FTTextureFont.Plo  libftgl_la-FTTextureGlyph.Plo  libftgl_la-FTVectoriser.Plo  libftgl_la-ftglesGlue.Plo  libftgles2_la-FTBuffer.Plo  libftgles2_la-FTCharmap.Plo  libftgles2_la-FTContour.Plo  libftgles2_la-FTFace.Plo  libftgles2_la-FTGlyphContainer.Plo  libftgles2_la-FTLibrary.Plo  libftgles2_la-FTPoint.Plo  libftgles2_la-FTSize.Plo  libftgles2_la-FTVectoriser.Plo
ftgles2/src/.libs/: libftgles2.la  libftgles2.lai  libftgles2.so.0.1.2
ftgles2/src/FTFont/: FTBitmapFont.cpp  FTBufferFont.cpp  FTExtrudeFont.cpp  FTFontGlue.cpp  FTFontImpl.h  FTOutlineFont.cpp  FTPixmapFont.cpp  FTPolygonFont.cpp  FTTextureFont.cpp  libftgles2_la-FTBitmapFont.lo  libftgles2_la-FTBufferFont.lo  libftgles2_la-FTFont.lo  libftgles2_la-FTFontGlue.lo  libftgles2_la-FTOutlineFont.lo  libftgles2_la-FTPixmapFont.lo  libftgles2_la-FTPolygonFont.lo  libftgles2_la-FTTextureFont.lo
ftgles2/src/FTFont/.deps/: libftgles2_la-FTBitmapFont.Plo  libftgles2_la-FTBufferFont.Plo  libftgles2_la-FTFont.Plo  libftgles2_la-FTFontGlue.Plo  libftgles2_la-FTOutlineFont.Plo  libftgles2_la-FTPixmapFont.Plo  libftgles2_la-FTPolygonFont.Plo  libftgles2_la-FTTextureFont.Plo
ftgles2/src/FTGLES2/: FTBBox.h  FTBitmapGlyph.h  FTBuffer.h  FTBufferFont.h  FTBufferGlyph.h  FTExtrdGlyph.h  FTFont.h  FTGLBitmapFont.h  FTGLExtrdFont.h  FTGLOutlineFont.h  FTGLPixmapFont.h  FTGLPolygonFont.h  FTGLTextureFont.h  FTGlyph.h  FTLayout.h  FTOutlineGlyph.h  FTPixmapGlyph.h  FTPoint.h  FTPolyGlyph.h  FTSimpleLayout.h  FTTextureGlyph.h  ftgles2.h  ftgles2Glue.cpp  ftgles2Glue.h  ftglesGlue.cpp  libftgles2_la-ftgles2Glue.lo
ftgles2/src/FTGLES2/.deps/: libftgles2_la-ftgles2Glue.Plo  libftgles2_la-ftglesGlue.Plo
ftgles2/src/FTGlyph/: FTBitmapGlyph.cpp  FTBufferGlyph.cpp  FTExtrudeGlyph.cpp  FTGlyph.cpp  FTGlyphGlue.cpp  FTGlyphImpl.h  FTOutlineGlyph.cpp  FTPixmapGlyph.cpp  FTPolygonGlyph.cpp  FTPolygonGlyph.cppO  FTTextureGlyph.cpp  libftgles2_la-FTBitmapGlyph.lo  libftgles2_la-FTBufferGlyph.lo  libftgles2_la-FTGlyph.lo  libftgles2_la-FTGlyphGlue.lo  libftgles2_la-FTOutlineGlyph.lo  libftgles2_la-FTPixmapGlyph.lo  libftgles2_la-FTPolygonGlyph.lo  libftgles2_la-FTTextureGlyph.lo
ftgles2/src/FTGlyph/.deps/: libftgles2_la-FTBitmapGlyph.Plo  libftgles2_la-FTBufferGlyph.Plo  libftgles2_la-FTGlyph.Plo  libftgles2_la-FTGlyphGlue.Plo  libftgles2_la-FTOutlineGlyph.Plo  libftgles2_la-FTPixmapGlyph.Plo  libftgles2_la-FTPolygonGlyph.Plo  libftgles2_la-FTTextureGlyph.Plo
ftgles2/src/FTLayout/: FTLayout.cpp  libftgles2_la-FTLayout.lo  libftgles2_la-FTLayoutGlue.lo  libftgles2_la-FTSimpleLayout.lo
ftgles2/src/FTLayout/.deps/: libftgles2_la-FTLayout.Plo  libftgles2_la-FTLayoutGlue.Plo  libftgles2_la-FTSimpleLayout.Plo
ftgles2/src/iGLU-1.0.0/include/: glu.h  glu.hO
ftgles2/src/iGLU-1.0.0/libtess/: libftgles2_la-dict.lo  libftgles2_la-geom.lo  libftgles2_la-memalloc.lo  libftgles2_la-mesh.lo  libftgles2_la-normal.lo  libftgles2_la-priorityq.lo  libftgles2_la-render.lo  libftgles2_la-sweep.lo  libftgles2_la-tess.lo  libftgles2_la-tessmono.lo
ftgles2/src/iGLU-1.0.0/libtess/.deps/: libftgles2_la-dict.Plo  libftgles2_la-geom.Plo  libftgles2_la-memalloc.Plo  libftgles2_la-mesh.Plo  libftgles2_la-normal.Plo  libftgles2_la-priorityq.Plo  libftgles2_la-render.Plo  libftgles2_la-sweep.Plo  libftgles2_la-tess.Plo  libftgles2_la-tessmono.Plo
ftgles2/src/iGLU-1.0.0/libutil/: error.c  libftgles2_la-error.lo  libftgles2_la-glue.lo  libftgles2_la-project.lo  libftgles2_la-registry.lo  project.c
ftgles2/src/iGLU-1.0.0/libutil/.deps/: libftgles2_la-error.Plo  libftgles2_la-glue.Plo  libftgles2_la-project.Plo  libftgles2_la-registry.Plo
ftgles2/src/iGLUes2/libtess/.deps/: libftgles2_la-dict.Plo  libftgles2_la-memalloc.Plo  libftgles2_la-mesh.Plo  libftgles2_la-normal.Plo  libftgles2_la-priorityq.Plo  libftgles2_la-render.Plo  libftgles2_la-sweep.Plo  libftgles2_la-tess.Plo  libftgles2_la-tessmono.Plo
ftgles2/src/iGLUes2/libutil/: error.cO  project.c  project.cO
ftgles2/src/iGLUes2/libutil/.deps/: libftgles2_la-error.Plo  libftgles2_la-glue.Plo  libftgles2_la-project.Plo  libftgles2_la-registry.Plo
ftgles2/test/: CTest.c  CTest.sh  Makefile  Makefile.in  config.h
(+18 files in other folders)
